# ijon-llm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture-design.md  getting_started.md  installed-system-deps.md
docs/writeup/: ijon-llm-writeup.standalone.html  index.html
experiments/: README.md
experiments/human_vs_llm/: REPORT.md  all.json  maze.json  tpm.json  tpm_scoped.json
experiments/libarchive/: REPORT.md  result.json
experiments/libpng_autonomy/: REPORT.md  result.json
experiments/libpng_convergence/: REPORT.md  result.json
experiments/libtpms/: README.md
experiments/mario/: 3way_ijon1d.json  3way_ijon2d.json  3way_plain.json  REPORT.md  annotation.json  convergence.json  human_arm.json
harness/: __init__.py  agent.py  build.py  build_doctor.py  config.py  coverage.py  fuzzer.py  localize.py  loop.py  model.py  plateau.py
ijon_reloaded/: __init__.py  analyst_cli.py  build_doctor.py  campaign_cli.py  campaign_supervisor.py  cli.py  run_target.py  triage_crashes.py
scripts/: analyst_cli.py  annotation_comparison.py  autonomous.py  bringup.py  build_doctor.py  campaign_cli.py  campaign_supervisor.py  chunk_seq_diversity.py  libpng_autonomy.py  libpng_convergence.py  libpng_loop.py  mario_annotation.py  mario_convergence.py  mario_video.py  reproduce_m1.py  run_target.py  solve_maze_llm.py  solve_target_llm.py  triage_crashes.py
tests/: test_harness.py  test_localize.py
workspace/dmg2img/: build.sh  make_seed.py
workspace/libarchive/: build.sh  target.json
workspace/libcoap/: build.sh  cov-build.sh  (+2 more)
(+33 files in other folders)
